# round_touch

./: .gitignore  .gitmodules  IDEAS.md  README.md  partitions_ota.csv  platformio.ini  pyproject.toml  round_touch.ino
boards/makerfabs_round_128/: BoardConfig.h
boards/waveshare_s3_lcd_7/: BoardConfig.h
lib/: lv_conf.h
server/: .dockerignore  Dockerfile  main.py  ota_server.py  requirements.txt  server.toml  server.toml.example
server/app/: __init__.py  config.py  database.py  schema.py
server/app/routes/: datasources.py  device.py  dynamic.py  editor.py
server/app/services/: datasources.py  firmware.py  llm.py  manifest.py
server/ui/makerfabs_round_128/: screens.json
server/ui/simulator/: screens.json
server/ui/waveshare_s3_lcd_7/: screens.json
server/web/: index.html  package-lock.json  package.json
server/web/src/: App.css  App.tsx  index.css  main.tsx
server/web/src/api/: client.ts
server/web/src/components/: AddComponentDialog.tsx  ColorPicker.tsx  ComponentTree.tsx  DevicePreview.tsx  Header.tsx  IconPicker.tsx  PropEditor.tsx  RawJsonEditor.tsx  TabManager.tsx  TreeNode.tsx
server/web/src/hooks/: useManifest.ts
server/web/src/types/: manifest.ts  schema.ts
simulator/: CMakeLists.txt  main.cpp
simulator/platform/: CurlNetwork.cpp  CurlNetwork.h  SimDisplay.cpp  SimDisplay.h  SimTouch.cpp  SimTouch.h
simulator/shims/: Arduino.h  Arduino_GFX_Library.h  BoardConfig.h  CST816S.h  FS.h  JPEGDEC.h  SD.h  SPI.h  SimDrivers.h  Wire.h
src/: main.cpp
src/application/: Application.cpp  Application.h
src/application/eventbus/: EventBus.cpp  EventBus.h  EventQueue.h
src/application/eventbus/types/: Event.h  TouchEvent.h
src/application/interface/: Interface.cpp  Interface.h  Toast.cpp  Toast.h
src/application/interface/components/: ComponentManager.cpp  ComponentManager.h  Components.cpp  Components.h
src/application/interface/components/core/: Card.h  Component.h  FillScreen.h  Text.h
src/application/interface/components/demo/: Counter.h
src/application/interface/components/dynamic/: DynamicText.h  LLMText.h  ServerTextBase.h
src/application/interface/components/ha/: HABinarySensor.h  HAToggle.h  HAWeather.h
src/application/interface/components/input/: Button.h  NavButton.h  ScrollContainer.h  StateChangeRule.h  SwipeInput.h  TabBar.h  TouchInput.h  TouchNavigation.h
src/application/interface/components/layout/: FlexLayout.cpp  FlexLayout.h
src/application/interface/components/settings/: ContentRefreshPanel.h  DisplayInfoPanel.h  OTAUpdatePanel.h  RotationToggle.h
src/application/interface/components/types/: Component.cpp  Component.h  ComponentWithChildren.cpp  ComponentWithChildren.h  Layout.cpp  Layout.h  StatefulComponent.h  StatefulComponentWithChildren.h
src/application/interface/layout/: LayoutContext.cpp  LayoutContext.h  LayoutManager.cpp  LayoutManager.h
src/application/services/: HomeAssistant.cpp  HomeAssistant.h  OTAUpdate.cpp  OTAUpdate.h
src/application/workflow/: ComponentLibrary.cpp  ComponentLibrary.h  Workflow.cpp  Workflow.h  WorkflowStates.h
src/config/: Constants.h  HAConfig.example.h  NetworkConfig.example.h  Version.h
src/config/screens/: GaugeCard.h  MainLayout.h  Routes.cpp  Routes.h  Screens.cpp  Screens.h  Theme.h  TitledCard.h
src/device/: Device.cpp  Device.h  IDisplay.h  INetwork.h  IStorage.h  ITouch.h
src/device/hw/: Display.h  SDCard.h  Touch.cpp  Touch.h
src/device/hw/drivers/ch422g/: CH422G.h
src/device/hw/drivers/cst816s/: CST816STouch.cpp  CST816STouch.h
src/device/hw/drivers/gc9a01/: GC9A01Display.h  esp_lcd_gc9a01.c  esp_lcd_gc9a01.h
src/device/hw/drivers/gt911/: GT911Touch.cpp  GT911Touch.h
src/device/hw/drivers/network/: ArduinoNetwork.cpp  ArduinoNetwork.h
src/device/hw/drivers/rgb_panel/: RGBPanelDisplay.h
src/device/hw/drivers/sdcard/: NoStorage.h  SPISDCard.h
src/device/types/: TouchLocation.h
src/events/: EventHandler.h  EventHub.h  EventQueue.h  EventSource.h
src/events/types/: InputEvent.h  TouchEvent.h  WorkflowEvent.h
src/jpeg/: JpegFunctions.h  JpegIO.h  JpegRender.h
src/lib/jpeg/: JpegFunctions.h  JpegIO.h  JpegRender.h
src/ui/registry/: ComponentFactories.h  ComponentRegistry.h  JsonTreeParser.h  UserScreenManager.h
src/util/: Timer.h
src/workflow/: Workflow.cpp  Workflow.h
